[gd_scene load_steps=4 format=3 uid="uid://cwh5582l31gnm"]

[ext_resource type="Script" path="res://prefabs/dragableObject/dragable_object.gd" id="1_41c0n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wf7ck"]

[sub_resource type="BoxMesh" id="BoxMesh_053v4"]

[node name="DragableObject" type="RigidBody3D"]
script = ExtResource("1_41c0n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_wf7ck")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_053v4")
skeleton = NodePath("../..")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
